--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -124,9 +124,9 @@ body {
   padding: 50px 0;
 }
 
-/* Services */
+/* speakers */
 
-.services {
+.speakers {
   background: #7fbbda;
   padding: 50px 0;
   color: #ffffff;
