form integration done

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -162,17 +162,17 @@ i.service-icon {
   background-size: cover;
 }
 
-/* Portfolio */
+/* registration */
 
-.portfolio {
+.registration {
   padding: 50px 0;
 }
 
-.portfolio-item {
+.registration-item {
   margin-bottom: 25px;
 }
 
-.img-portfolio {
+.img-registration {
   margin: 0 auto;
 }
 
@@ -233,4 +233,8 @@ i.scroll:hover {
 	height: 75%;
   }
 
+}
+
+.jotform-form{
+     background-color:white;
 }
