--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -243,6 +243,7 @@ i.scroll:hover {
 	height:180px;
 	border-radius:90px;
 	border: 10px solid white;
+    margin:auto;
 	
 }
 .arenas{
@@ -303,4 +304,26 @@ i.scroll:hover {
 	background-size:350px;
 	background-image:url("../img/herrera.png");
 	background-position: -80px -70px;
+}
+
+.sandy{
+	background-size:300px;
+	background-image:url("../img/sandy.png");
+	background-position: -100px 10px;
+}
+
+.koonin{
+	background-size:220px;
+	background-image:url("../img/koonin.jpg");
+	background-position: -30px 0px;
+}
+.ramasco{
+	background-size:190px;
+	background-image:url("../img/ramasco.jpg");
+	background-position: -15px 0px;
+}
+.motter{
+	background-size:220px;
+	background-image:url("../img/motter.jpg");
+	background-position: -30px 0px;
 }
