--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -306,10 +306,10 @@ i.scroll:hover {
 	background-position: -80px -70px;
 }
 
-.sandy{
+.sybil{
 	background-size:300px;
-	background-image:url("../img/sandy.png");
-	background-position: -100px 10px;
+	background-image:url("../img/sybil.png");
+	background-position: -60px 0px;
 }
 
 .koonin{
